style: format code for consistency and readability across multiple files